// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api events when user is "admin" should subscribe shoots for a single cluster 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "name": "fooShoot",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "admin" should subscribe shoots for a single namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "admin" should subscribe shoots for all namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "admin" should subscribe unhealthy shoots for all namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe shoots for a single cluster 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "name": "fooShoot",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe shoots for a single namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe shoots for all namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-bar",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe unhealthy shoots for all namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-bar",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;
